# phi3-sample

./: README.md  main.py  onnx.py  pyproject.toml  utils.py
entity/: config.py  model.py
utils/: utils.py
