[tool.poetry]
name = "phi3-sample"
version = "0.1.0"
description = ""
authors = ["takenaka <https://github.com/TakenokoTech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.40.1"
torch = "^2.3.0"
packaging = "^24.0"
accelerate = "^0.29.3"
optimum = "^1.19.1"
mlx-lm = "^0.12.0"
onnxruntime = "^1.17.3"
onnx = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
